# learn-claude-code-by-rebuild

./: AGENTS.md
docs/learning/: python-from-scratch-teaching-outline.md  python-incremental-build-plan.md
python-rebuild/: pyproject.toml
python-rebuild/.claude/rules/: chinese-greeting.md
python-rebuild/mini_claude_rebuild/: __init__.py  __main__.py  agent.py  frontmatter.py  mcp_client.py  memory.py  prompt.py  session.py  skills.py  subagent.py  tools.py  ui.py
