[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-claude-rebuild"
version = "0.1.0"
description = "A step-by-step Python rebuild of Mini Claude Code"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mini-claude-rebuild = "mini_claude_rebuild.__main__:main"

[tool.setuptools.packages.find]
include = ["mini_claude_rebuild*"]
